name:                java2haskell
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Eryk Ciepiela
maintainer:          eryk.ciepiela.dev@gmail.com
category:            education
build-type:          Simple
extra-source-files:  
cabal-version:       >=1.10

executable java2haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base, time, aeson, bytestring, HTTP, http-client, http-client-tls, http-conduit
  default-language:    Haskell2010

